@@ -1,0 +1,3 @@
+ITEM_ID=Assembly64 item ID
+CATEGORY_ID=Assembly64 category ID
+FILE_PATH=C64 Tune/Tape/Disk/Cart File
