@@ -1,0 +1,3 @@
+ITEM_ID=Assembly64 Item ID
+CATEGORY_ID=Assembly64 Kategorie ID
+FILE_PATH=C64 Tune/Tape/Disk/Cart Datei
